--- a/index.html
+++ b/index.html
@@ -49,12 +49,8 @@
     }
 
     @keyframes fadeIn {
-      from {
-        opacity: 0;
-      }
-      to {
-        opacity: 1;
-      }
+      from { opacity: 0; }
+      to { opacity: 1; }
     }
   </style>
 </head>
@@ -70,3 +66,4 @@
   <button onclick="alert('The path begins...')">Start the Path</button>
 </body>
 </html>
+Create index.html in gh-pages
