--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       padding: 0;
       height: 100vh;
       font-family: Arial, sans-serif;
-      background: url(BOB84791-CAD5-4D8E-A25A-C665CB5453F5.png) no-repeat center center fixed;
+      background: url('landing.jpg') no-repeat center center fixed;
 background-size: cover;
 
       color: #ffffff;
