--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
       padding: 0;
       height: 100vh;
       font-family: Arial, sans-serif;
-      background: url('landing.jpg') no-repeat center center fixed;
-background-size: cover;
-
+      background: url('B08BA971-CAD5-4D8E-A25A-C656C85345F8.png') no-repeat center center fixed;
+      background-size: cover;
       color: #ffffff;
       display: flex;
       align-items: center;
@@ -26,6 +25,7 @@ background-size: cover;
     h1 {
       font-size: 3rem;
       margin-bottom: 20px;
+      text-shadow: 1px 1px 5px #000;
     }
 
     p {
@@ -33,6 +33,7 @@ background-size: cover;
       max-width: 600px;
       line-height: 1.6;
       margin-bottom: 20px;
+      text-shadow: 1px 1px 4px #000;
     }
 
     button {
@@ -68,4 +69,4 @@ background-size: cover;
   <button onclick="alert('The path begins...')">Start the Path</button>
 </body>
 </html>
-Create index.html in gh-pages
+Add background image
