--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       padding: 0;
       height: 100vh;
       font-family: Arial, sans-serif;
-      background: url('7466b798-b10c-47f7-85aa-0a117f447f58.png') no-repeat center center fixed;
+      background: https://github.com/dikinistomas/companions-path/blob/main/B0B84791-CAD5-4D8E-A25A-C665C85453F5.png no-repeat center center fixed;
       background-size: cover;
       color: #ffffff;
       display: flex;
