--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       padding: 0;
       height: 100vh;
       font-family: Arial, sans-serif;
-      background: https://github.com/dikinistomas/companions-path/blob/main/B0B84791-CAD5-4D8E-A25A-C665C85453F5.png no-repeat center center fixed;
-      background-size: cover;
+      background: https://raw.githubusercontent.com/dikinistomas/companions-path/main/B0B84791-CAD5-4D8E-A25A-C665C85453F5.png
+
       color: #ffffff;
       display: flex;
       align-items: center;
