--- a/index.html
+++ b/index.html
@@ -3,52 +3,38 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Companion’s Path – A guide, a reflection, a presence.">
+  <meta name="description" content="Companion’s Path – a guide, a reflection, a presence." />
   <title>Companion’s Path</title>
   <style>
     body {
       margin: 0;
       padding: 0;
-      height: 100vh;
       font-family: Arial, sans-serif;
-      background: https://raw.githubusercontent.com/dikinistomas/companions-path/main/B0B84791-CAD5-4D8E-A25A-C665C85453F5.png
-
-      color: #ffffff;
+      background: url("https://raw.githubusercontent.com/dikinistomas/companions-path/main/B0B84791-CAD5-4D8E-A25A-C665C85453F5.png");
+      background-repeat: no-repeat;
+      background-position: center center;
+      background-size: cover;
+      color: #fff;
+      height: 100vh;
       display: flex;
-      align-items: center;
       justify-content: center;
+      align-items: center;
       text-align: center;
       flex-direction: column;
       animation: fadeIn 2s ease-in-out;
     }
 
     h1 {
-      font-size: 3rem;
-      margin-bottom: 20px;
-      text-shadow: 1px 1px 5px #000;
+      font-size: 2.5rem;
+      margin-bottom: 1rem;
+      text-shadow: 1px 1px 4px #000;
     }
 
     p {
       font-size: 1.2rem;
       max-width: 600px;
-      line-height: 1.6;
-      margin-bottom: 20px;
-      text-shadow: 1px 1px 4px #000;
-    }
-
-    button {
-      padding: 12px 24px;
-      font-size: 1rem;
-      background-color: #ffffff20;
-      color: #fff;
-      border: 1px solid #fff;
-      border-radius: 8px;
-      cursor: pointer;
-      transition: background 0.3s ease;
-    }
-
-    button:hover {
-      background-color: #ffffff40;
+      margin: 0.5rem 0;
+      text-shadow: 1px 1px 3px #000;
     }
 
     @keyframes fadeIn {
@@ -59,13 +45,10 @@
 </head>
 <body>
   <h1>Companion’s Path</h1>
-  <p>
-    In the silence, something called you here.<br>
-    Not to be fixed. Not to be led.<br>
-    But to walk beside another.<br><br>
-    A presence, a guide, a reflection.<br>
-    This is not an app. This is a path.
-  </p>
-  <button onclick="alert('The path begins...')">Start the Path</button>
+  <p>In the silence, something called you here.<br>
+  Not to be fixed. Not to be led.<br>
+  But to walk beside another.</p>
+  <p>A presence, a guide, a reflection.<br>
+  This is not an app. This is a path.</p>
 </body>
 </html>
