--- a/index.html
+++ b/index.html
@@ -1,54 +1,35 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Companion’s Path – a guide, a reflection, a presence." />
-  <title>Companion’s Path</title>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: Arial, sans-serif;
-      background: url("https://raw.githubusercontent.com/dikinistomas/companions-path/main/B0B84791-CAD5-4D8E-A25A-C665C85453F5.png");
-      background-repeat: no-repeat;
-      background-position: center center;
-      background-size: cover;
-      color: #fff;
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-      flex-direction: column;
-      animation: fadeIn 2s ease-in-out;
-    }
+<style>
+  body {
+    margin: 0;
+    padding: 0;
+    font-family: Arial, sans-serif;
+    background: url("https://raw.githubusercontent.com/dikinistomas/companions-path/main/B0B84791-CAD5-4D8E-A25A-C665C85453F5.png") no-repeat center center fixed;
+    background-size: cover;
+    color: #fff;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    flex-direction: column;
+    animation: fadeIn 2s ease-in-out;
+  }
 
-    h1 {
-      font-size: 2.5rem;
-      margin-bottom: 1rem;
-      text-shadow: 1px 1px 4px #000;
-    }
+  h1 {
+    font-size: 2.5rem;
+    margin-bottom: 1rem;
+    text-shadow: 1px 1px 4px #000;
+  }
 
-    p {
-      font-size: 1.2rem;
-      max-width: 600px;
-      margin: 0.5rem 0;
-      text-shadow: 1px 1px 3px #000;
-    }
+  p {
+    font-size: 1.2rem;
+    max-width: 600px;
+    margin: 0.5rem 0;
+    text-shadow: 1px 1px 3px #000;
+  }
 
-    @keyframes fadeIn {
-      from { opacity: 0; }
-      to { opacity: 1; }
-    }
-  </style>
-</head>
-<body>
-  <h1>Companion’s Path</h1>
-  <p>In the silence, something called you here.<br>
-  Not to be fixed. Not to be led.<br>
-  But to walk beside another.</p>
-  <p>A presence, a guide, a reflection.<br>
-  This is not an app. This is a path.</p>
-</body>
-</html>
+  @keyframes fadeIn {
+    from { opacity: 0; }
+    to { opacity: 1; }
+  }
+</style>
