--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Companion's Path – A guide, a reflection, a presence." />
+  <meta name="description" content="Companion's Path – a guide, a reflection, a presence." />
   <title>Companion’s Path</title>
   <style>
     html, body {
@@ -14,61 +14,26 @@
 
     body {
       font-family: Arial, sans-serif;
-      background-color: #a95000;
-      background-image: url("https://raw.githubusercontent.com/dikinistomas/companions-path/main/B0B84791-CAD5-4D8E-A25A-C665C85453F5.png");
-      background-repeat: no-repeat;
+      background-image: url('https://raw.githubusercontent.com/dikinistomas/companions-path/main/3851b737-b866-423f-8cfa-4c74e7d0d125.png');
+      background-size: cover;
       background-position: center center;
-      background-size: auto;
+      background-repeat: no-repeat;
       background-attachment: fixed;
-
+      color: white;
+      text-align: center;
       display: flex;
       justify-content: center;
       align-items: center;
       flex-direction: column;
-      text-align: center;
-      color: white;
       animation: fadeIn 2s ease-in-out;
-    }
-
-    h1 {
-      font-size: 2.5rem;
-      margin-bottom: 1rem;
-      text-shadow: 1px 1px 8px #000;
-    }
-
-    p {
-      font-size: 1rem;
-      max-width: 90%;
-      margin: 0.3rem 0;
-      text-shadow: 1px 1px 4px #000;
     }
 
     @keyframes fadeIn {
       from { opacity: 0; }
-      to { opacity: 1; }
-    }
-
-    @media (max-width: 768px) {
-      h1 {
-        font-size: 1.8rem;
-      }
-
-      p {
-        font-size: 0.95rem;
-      }
-
-      body {
-        background-size: 100% auto;
-      }
+      to   { opacity: 1; }
     }
   </style>
 </head>
 <body>
-  <h1>Companion’s Path</h1>
-  <p>In the silence, something called you here.</p>
-  <p>Not to be fixed. Not to be led.</p>
-  <p>But to walk beside another.</p>
-  <p>A presence, a guide, a reflection.</p>
-  <p>This is not an app. This is a path.</p>
 </body>
 </html>
