--- a/index.html
+++ b/index.html
@@ -10,67 +10,71 @@
       margin: 0;
       padding: 0;
       height: 100%;
-      box-sizing: border-box;
     }
-
     body {
       font-family: Arial, sans-serif;
-      background: url('https://raw.githubusercontent.com/dikinistomas/companions-path/main/3851b737-b866-423f-8cfa-4c74e7d0d125.png') center center no-repeat;
+      background-color: #a95000;
+      background-image: url("https://raw.githubusercontent.com/dikinistomas/companions-path/main/ChatGPT%20Image%20Jul%209,%202025,%2005_14_18%20PM.png");
+      background-position: center center;
+      background-repeat: no-repeat;
       background-size: cover;
       background-attachment: fixed;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
+      color: white;
       text-align: center;
-      color: #ffffff;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
       animation: fadeIn 2s ease-in-out;
     }
-
     h1 {
-      font-size: 2.5rem;
-      margin-bottom: 20px;
+      font-size: 3rem;
+      margin-bottom: 1rem;
       text-shadow: 1px 1px 8px #000;
     }
-
+    p {
+      font-size: 1.2rem;
+      max-width: 600px;
+      line-height: 1.6;
+      margin: 0;
+      text-shadow: 1px 1px 4px #000;
+    }
     .start-button {
       display: inline-block;
-      padding: 14px 32px;
+      margin-top: 1rem;
+      padding: 12px 24px;
       font-size: 1rem;
-      font-weight: bold;
+      background-color: rgba(255, 255, 255, 0.2);
       color: #fff;
-      background-color: #a3491b;
-      border: none;
-      border-radius: 30px;
+      border: 1px solid #fff;
+      border-radius: 8px;
       text-decoration: none;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.4);
-      transition: background-color 0.3s ease;
-      margin-top: 30px;
+      cursor: pointer;
+      transition: background 0.3s ease;
     }
-
     .start-button:hover {
-      background-color: #843800;
+      background-color: rgba(255, 255, 255, 0.4);
     }
-
     @keyframes fadeIn {
       from { opacity: 0; }
       to   { opacity: 1; }
     }
-
     @media (max-width: 768px) {
-      h1 {
-        font-size: 2rem;
-      }
-
-      .start-button {
-        padding: 12px 24px;
-        font-size: 0.95rem;
-      }
+      h1 { font-size: 1.8rem; }
+      p  { font-size: 0.95rem; }
+      body { background-size: 100% auto; }
     }
   </style>
 </head>
 <body>
   <h1>Companion’s Path</h1>
+  <p>
+    In the silence, something called you here.<br>
+    Not to be fixed. Not to be led.<br>
+    But to walk beside another.<br><br>
+    A presence, a guide, a reflection.<br>
+    This is not an app. This is a path.
+  </p>
   <a href="#" class="start-button">Begin Your Path</a>
 </body>
 </html>
