--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta name="description" content="Companion’s Path – a guide, a reflection, a presence." />
   <title>Companion’s Path</title>
   <style>
@@ -11,70 +11,61 @@
       padding: 0;
       height: 100%;
     }
+
     body {
       font-family: Arial, sans-serif;
-      background-color: #a95000;
-      background-image: url("https://raw.githubusercontent.com/dikinistomas/companions-path/main/ChatGPT%20Image%20Jul%209,%202025,%2005_14_18%20PM.png");
-      background-position: center center;
+      background-image: url('https://raw.githubusercontent.com/dikinstomas/companions-path/main/490a9836-5d79-419a-80d5-332dc5b8a088.png');
+      background-size: contain;
       background-repeat: no-repeat;
-      background-size: cover;
-      background-attachment: fixed;
+      background-position: center center;
+      background-color: #000; /* Juodas fonas už paveiksliuko ribų */
       color: white;
-      text-align: center;
       display: flex;
-      align-items: center;
-      justify-content: center;
       flex-direction: column;
-      animation: fadeIn 2s ease-in-out;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
     }
+
     h1 {
-      font-size: 3rem;
-      margin-bottom: 1rem;
-      text-shadow: 1px 1px 8px #000;
+      font-size: 2em;
+      text-shadow: 1px 1px 2px black;
+      margin-bottom: 0.5em;
     }
+
     p {
-      font-size: 1.2rem;
-      max-width: 600px;
+      max-width: 400px;
       line-height: 1.6;
-      margin: 0;
-      text-shadow: 1px 1px 4px #000;
+      margin: 0.2em 0;
+      font-size: 1em;
+      text-shadow: 1px 1px 2px black;
     }
-    .start-button {
-      display: inline-block;
-      margin-top: 1rem;
-      padding: 12px 24px;
-      font-size: 1rem;
-      background-color: rgba(255, 255, 255, 0.2);
-      color: #fff;
-      border: 1px solid #fff;
-      border-radius: 8px;
-      text-decoration: none;
+
+    .btn {
+      margin-top: 1.5em;
+      background-color: #732F00;
+      border: none;
+      color: white;
+      padding: 0.7em 1.4em;
+      border-radius: 20px;
       cursor: pointer;
-      transition: background 0.3s ease;
+      font-size: 1em;
+      box-shadow: 2px 2px 6px rgba(0,0,0,0.4);
+      transition: background-color 0.3s ease;
     }
-    .start-button:hover {
-      background-color: rgba(255, 255, 255, 0.4);
-    }
-    @keyframes fadeIn {
-      from { opacity: 0; }
-      to   { opacity: 1; }
-    }
-    @media (max-width: 768px) {
-      h1 { font-size: 1.8rem; }
-      p  { font-size: 0.95rem; }
-      body { background-size: 100% auto; }
+
+    .btn:hover {
+      background-color: #a14500;
     }
   </style>
 </head>
 <body>
   <h1>Companion’s Path</h1>
-  <p>
-    In the silence, something called you here.<br>
-    Not to be fixed. Not to be led.<br>
-    But to walk beside another.<br><br>
-    A presence, a guide, a reflection.<br>
-    This is not an app. This is a path.
-  </p>
-  <a href="#" class="start-button">Begin Your Path</a>
+  <p>In the silence, something called you here.<br>
+  Not to be fixed. Not to be led.<br>
+  But to walk beside another.</p>
+  <p>A presence, a guide, a reflection.<br>
+  This is not an app. This is a path.</p>
+  <button class="btn">Begin Your Path</button>
 </body>
 </html>
